[package]
name = "devise_core"
version = "0.3.1"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A library for devising derives and other procedural macros."
license = "MIT/Apache-2.0"
repository = "https://github.com/SergioBenitez/Devise"

[dependencies]
quote = "1.0.15"
proc-macro2 = "1.0.36"
proc-macro2-diagnostics = "0.9.1"
syn = { version = "1.0.86", features = ["full", "parsing", "extra-traits", "visit-mut"] }
bitflags = "1.3.2"
